[package]
name    = "rollbar"
version = "0.5.0"
authors = ["Giovanni Capuano <webmaster@giovannicapuano.net"]

repository  = "https://github.com/RoxasShadow/rollbar-rs"
license     = "BSD-2-Clause"

description = "Track and report errors, exceptions and messages from your Rust application to Rollbar."
keywords    = ["rollbar", "logging", "errors", "exceptions"]

[dependencies]
backtrace = "0.3.15"

hyper = "0.12"
hyper-tls = "0.3"

tokio="*"
futures="*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
